Update to responsive styling.  Add sidebar, about me section.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,7 +8,7 @@
             <h1>
                 <a href="#" rel="bookmark" title="link to this post">@post.title</a>
             </h1>
-            <p class="postDate">@post.postDate</p>
+            <p class="postDate">@org.joda.time.format.DateTimeFormat.forPattern("EEEE, dd MMMM yyyy").print(post.postDate)</p>
         </header>
         <p>
             @post.post
