Add some blog article specific styling to make things look a bit better.  Add in some more reasonable fake blog post text.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -11,7 +11,7 @@
             <p class="postDate">@org.joda.time.format.DateTimeFormat.forPattern("EEEE, dd MMMM yyyy").print(post.postDate)</p>
         </header>
         <p>
-            @post.post
+            @Html(post.post)
         </p>
     </article>
 }
