--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,5 +9,5 @@ article p.postDate {
 
 article {
     margin-bottom: 5em;
-//    border-bottom: 1px solid #999;
+    /*border-bottom: 1px solid #999;*/
 }
