Add simple data table to hold blog posts.  Move sample data into the database.  Query the db for posts rather than having the entries generated in code.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,7 +2,7 @@
 
 @main("Hi, Tim, Welcome to Play 2.0") {
 
-@for(post <- BlogPost.findAll()) {
+@for(post <- BlogPost.findAll2()) {
     <article>
         <header>
             <h1>
