Updates to some styling.  Add a proper title (not final yet).  Remove the navbar at the top.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -32,6 +32,7 @@
 
   <body>
 
+  @***
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -51,13 +52,13 @@
         </div>
       </div>
     </div>
+  ***@
 
     <div class="container">
         <!-- Main hero unit for a primary marketing message or call to action -->
-        <div class="hero-unit">
-            <h1>Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-            <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+        <div class="hero-unit header">
+            <a href="/" rel="bookmark"><h1>...In Case I Have Something to Say</h1></a>
+            <p>Random thoughts</p>
         </div>
 
         <div class="row">
