Externalize the blog post markup into its own fragment

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -56,7 +56,7 @@
 
     <div class="container">
         <!-- Main hero unit for a primary marketing message or call to action -->
-        <div class="hero-unit header">
+        <div class="page-header">
             <a href="/" rel="bookmark"><h1>...In Case I Have Something to Say</h1></a>
             <p>Random thoughts</p>
         </div>
