--- a/app/views/blogpost.scala.html
+++ b/app/views/blogpost.scala.html
@@ -1,18 +1,7 @@
 @(id: Int)
 
 @main("Hi, Tim, Welcome to Play 2.0") {
-
-@for(post <- BlogPost.findById(id)) {
-    <article>
-        <header>
-            <h1>
-                <a href="/blogs/@post.id" rel="bookmark" title="link to this post">@post.title</a>
-            </h1>
-            <p class="postDate">@org.joda.time.format.DateTimeFormat.forPattern("EEEE, dd MMMM yyyy").print(post.postDate)</p>
-        </header>
-        <p>
-            @Html(post.post)
-        </p>
-    </article>
-}
+    @for(post <- BlogPost.findById(id)) {
+        @postMarkup(post)
+    }
 }
