--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,7 +9,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Le styles -->
     <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
     <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")">
     <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
@@ -21,7 +20,6 @@
         padding-bottom: 40px;
       }
     </style>
-@***    <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet"> ***@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -55,7 +53,6 @@
   ***@
 
     <div class="container">
-        <!-- Main hero unit for a primary marketing message or call to action -->
         <div class="page-header">
             <a href="/" rel="bookmark"><h1>...In Case I Have Something to Say</h1></a>
             <p>Random thoughts</p>
@@ -66,8 +63,15 @@
                 @content
             </div>
             <div class="span4">
-                <div class="well">
+                <div class="well about">
                     <h1>About Me</h1>
+                    <ul>
+                        <li><a href="http://www.linkedin.com/in/braje">@@LinkedIn</a></li>
+                        <li><a href="http://www.twitter.com/tbraje">@@twitter</a></li>
+                        <li><a href="https://plus.google.com/u/0/100616999449370776195">@@Google+</a></li>
+                        <li><a href="https://github.com/braje">@@github</a></li>
+                    </ul>
+                    <h2>Recent posts</h2>
                 </div>
             </div>
         </div>
@@ -100,11 +104,9 @@
         <p>&copy; Timothy Braje 2012</p>
       </footer>
 
-    </div> <!-- /container -->
+    </div>
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    @** Javascrip placed at the end of the document so the pages load faster **@
     <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
 @**    <script src="../assets/js/jquery.js"></script>
     <script src="../assets/js/bootstrap-transition.js"></script>
